--- a/src/main/resources/templates/topPage.html
+++ b/src/main/resources/templates/topPage.html
@@ -4,11 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Document</title>
 </head>
 
 <body>
-
+    <div th:if="${loggedIn}">
+        <p th:text="'Welcome, ' + ${username} + '! Hello World'"></p>
+    </div>
+    <div th:unless="${loggedIn}">
+        <p>Hello World</p>
+    </div>
 </body>
 
 </html>
