--- a/src/main/resources/templates/topPage.html
+++ b/src/main/resources/templates/topPage.html
@@ -8,15 +8,14 @@
 </head>
 
 <body>
+    <!-- topPage.html -->
     <div th:if="${loggedIn}">
         <p th:text="'Welcome, ' + ${username} + '! Hello World'"></p>
-        <form th:action="@{/logout}" method="post">
-            <button type="submit">Logout</button>
-        </form>
+        <a th:href="@{/logout}">ログアウト</a>
     </div>
     <div th:unless="${loggedIn}">
         <p>Hello World</p>
-        <a th:href="@{/toLogin}"><button>Login</button></a>
+        <a th:href="@{/toLogin}">ログイン</a>
     </div>
 </body>
 
