--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -17,7 +17,7 @@
         </div>
         <div>
             <label for="email">メールアドレス:</label>
-            <input type="email" id="email" th:field="*{email}" />
+            <input type="email" id="email" th:field="*{email}"readonly />
         </div>
         <div>
             <label for="password">パスワード:</label>
