ユーザー削除の実装

--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -28,6 +28,10 @@
         </div>
     </form>
 
+    <form th:action="@{/user-profile/delete}" method="post">
+        <button type="submit">アカウント削除</button>
+    </form>
+
     <a href="/top">戻る</a>
 </body>
 
