--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -12,9 +12,9 @@
         <p th:text="'Welcome, ' + ${username} + '! Hello World'"></p>
         <a th:href="@{/user-profile}">プロファイル</a>
         <a th:href="@{/logout}">ログアウト</a>
-        <!-- 決済ボタンの表示 -->
-        <form action="#" th:action="@{/process-payment}" method="post">
-            <button type="submit">決済する</button>
+        
+        <form th:action="@{/payment-form}" method="get">
+            <button type="submit">決済フォームへ</button>
         </form>
     </div>
 
