apiプロファイル状態でStripe上で決済できた、localはできていない

--- a/src/main/resources/templates/payment-form.html
+++ b/src/main/resources/templates/payment-form.html
@@ -9,21 +9,40 @@
 
 <body>
     <h1>Payment Form</h1>
-    <form action="/process-payment" th:object="${paymentForm}" method="post">
+    <form action="/submit-payment-form" th:object="${paymentForm}" method="post">
         <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
-        <label for="tokenId">Card Token ID:</label>
-        <input type="text" id="tokenId" name="tokenId" required><br><br>
+
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" th:field="*{email}" required><br><br>
+
+        <label for="cardNumber">Card Number:</label>
+        <input type="text" id="cardNumber" name="cardNumber" th:field="*{cardNumber}" required><br><br>
+
+        <label for="expMonth">Expiration Month:</label>
+        <input type="text" id="expMonth" name="expMonth" th:field="*{expMonth}" required><br><br>
+
+        <label for="expYear">Expiration Year:</label>
+        <input type="text" id="expYear" name="expYear" th:field="*{expYear}" required><br><br>
+
+        <label for="cvc">CVC:</label>
+        <input type="text" id="cvc" name="cvc" th:field="*{cvc}" required><br><br>
+
+        <label for="cardHolder">Card Holder:</label>
+        <input type="text" id="cardHolder" name="cardHolder" th:field="*{cardHolder}" required><br><br>
+
+        <label for="country">Country:</label>
+        <input type="text" id="country" name="country" th:field="*{country}" required><br><br>
 
         <label for="description">Description:</label>
-        <input type="text" id="description" name="description" required><br><br>
+        <input type="text" id="description" name="description" th:field="*{description}" required><br><br>
 
         <label for="amount">Amount (in cents):</label>
-        <input type="number" id="amount" name="amount" required><br><br>
+        <input type="number" id="amount" name="amount" th:field="*{amount}" required><br><br>
 
         <label for="currency">Currency (e.g., USD):</label>
-        <input type="text" id="currency" name="currency" required><br><br>
+        <input type="text" id="currency" name="currency" th:field="*{currency}" required><br><br>
 
-        <button type="submit">Submit Payment</button>
+        <button type="submit">決済する</button>
     </form>
 </body>
 
