--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,15 +8,16 @@
 </head>
 
 <body>
-    <form th:action="@{/login}" th:object="${loginForm}" method="post">
+    <form th:action="@{/login}" method="post">
         <div>
             <label for="email">Email:</label>
-            <input type="text" id="email" name="email" th:field="*{email}" required />
+            <input type="text" id="email" name="email" required />
         </div>
         <div>
             <label for="password">Password:</label>
-            <input type="password" id="password" name="password" th:field="*{password}" required />
+            <input type="password" id="password" name="password" required />
         </div>
+        <div th:if="${errorMessage}" th:text="${errorMessage}" style="color: red;"></div>
         <button type="submit">ログイン</button>
     </form>
     <a th:href="@{/toRegister}">ユーザー登録</a>
