--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -10,23 +10,23 @@
 <body>
     <h1>ユーザー情報更新</h1>
 
-    <form th:action="@{/user-profile/update}" th:object="${userDTO}" method="post">
+    <form th:action="@{/user-profile/update}" th:object="${userUpdateForm}" method="post">
         <div>
             <label for="name">名前:</label>
+            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red;">名前エラー</div>
             <input type="text" id="name" th:field="*{name}" />
         </div>
         <div>
             <label for="email">メールアドレス:</label>
-            <input type="email" id="email" th:field="*{email}"readonly />
+            <input type="email" id="email" th:field="*{email}" readonly />
         </div>
         <div>
             <label for="password">パスワード:</label>
+            <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;">パスワードエラー</div>
             <input type="password" id="password" th:field="*{password}" />
         </div>
-        <div>
-            <button type="submit">更新</button>
-        </div>
-    </form>
+        <button type="submit">更新</button>
+    </form>    
 
     <form th:action="@{/user-profile/delete}" method="post">
         <button type="submit">アカウント削除</button>
