--- a/src/main/resources/templates/user-register.html
+++ b/src/main/resources/templates/user-register.html
@@ -8,18 +8,23 @@
 </head>
 
 <body>
+    <h1>ユーザー登録</h1>
     <form th:action="@{/register}" th:object="${userRegisterForm}" method="post">
+        <div th:if="${errorMessage}" th:text="${errorMessage}" style="color: red;"></div>
         <div>
             <label for="name">名前:</label>
-            <input type="text" id="name" name="name" th:field="*{name}" required />
+            <div th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red;">名前エラー</div>
+            <input type="text" id="name" th:field="*{name}" />
         </div>
         <div>
             <label for="email">メールアドレス:</label>
-            <input type="text" id="email" name="email" th:field="*{email}" required />
+            <div th:if="${#fields.hasErrors('email')}" th:errors="*{email}" style="color: red;">メールアドレスエラー</div>
+            <input type="text" id="email" th:field="*{email}" />
         </div>
         <div>
             <label for="password">パスワード:</label>
-            <input type="password" id="password" name="password" th:field="*{password}" required />
+            <div th:if="${#fields.hasErrors('password')}" th:errors="*{password}" style="color: red;">パスワードエラー</div>
+            <input type="password" id="password" th:field="*{password}" />
         </div>
         <button type="submit">登録</button>
     </form>
