--- a/src/main/resources/templates/top.html
+++ b/src/main/resources/templates/top.html
@@ -14,6 +14,10 @@
         <a th:href="@{/logout}">ログアウト</a>
 
         <form action="/process-payment" method="post">
+
+            <!-- CSRFトークン -->
+            <input type="hidden" name="${_csrf.parameterName}" value="${_csrf.token}" />
+
             <label for="priceId">商品を選択:</label>
             <select id="priceId" name="priceId" required>
                 <option value="" disabled selected>選択してください</option>
