--- a/src/main/resources/templates/payment-success.html
+++ b/src/main/resources/templates/payment-success.html
@@ -10,7 +10,7 @@
 <body>
     <h1>決済が完了しました！</h1>
     <p>ありがとうございます。お買い物が完了しました。</p>
-    <a href="/top">トップページに戻る</a>
+    <a th:href="@{/top}">トップページに戻る</a>
 </body>
 
 </html>
