--- a/src/main/resources/templates/user-profile.html
+++ b/src/main/resources/templates/user-profile.html
@@ -32,7 +32,7 @@
         <button type="submit">アカウント削除</button>
     </form>
 
-    <a href="/top">戻る</a>
+    <a th:href="@{/top}">トップページに戻る</a>
 </body>
 
 </html>
