--- a/src/main/resources/templates/user-register.html
+++ b/src/main/resources/templates/user-register.html
@@ -28,6 +28,8 @@
         </div>
         <button type="submit">登録</button>
     </form>
+
+    <a th:href="@{/toLogin}">ログイン</a>
 </body>
 
 </html>
